force-app/main/default/objects/Coverage_Code__c.object
<CustomObject>
    <description>This object stores records that will be used in the auto-renewal opportunity creation process.</description>
    <fields>
        <fullName>Active_Through__c</fullName>
        <inlineHelpText>Enter the date through which the new cov code should be used.  E.g. 7/31/2018 to include the last day of July.  This will be compared against the expected renewal date.  Leave blank if there is no end date.</inlineHelpText>
        <label>Active Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coverage_Code_Type__c</fullName>
        <inlineHelpText>Pick the Coverage Code type this &quot;replacement&quot; will apply to.</inlineHelpText>
        <label>Coverage Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coverage_Code_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Cov_Code__c</fullName>
        <inlineHelpText>Enter the Cov Code you want to be replaced.</inlineHelpText>
        <label>Current Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Cov_Code__c</fullName>
        <inlineHelpText>Enter the Cov Code value to be used going forward.</inlineHelpText>
        <label>New Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Enter the date the new cov code should start being used.  This will be compared against the expected renewal date.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Coverage Code</label>
    <listViews>
        <fullName>Active_Replacements</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Coverage_Code_Type__c</columns>
        <columns>Current_Cov_Code__c</columns>
        <columns>New_Cov_Code__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_Through__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Through__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Active_Through__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active &quot;Replacements&quot;</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Coverage_Code_Type__c</columns>
        <columns>Current_Cov_Code__c</columns>
        <columns>New_Cov_Code__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_Through__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Cov Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_cannot_be_less_than_Start_Date</fullName>
        <active>true</active>
        <description>Active Through Date must be past Start Date</description>
        <errorConditionFormula>$User.Run_Validation__c &amp;&amp;
Active_Through__c   &lt;=   Start_Date__c</errorConditionFormula>
        <errorDisplayField>Active_Through__c</errorDisplayField>
        <errorMessage>Active Through date must be after Start Date.</errorMessage>
    </validationRules>
</CustomObject>