force-app/main/default/objects/Coverage_Code__c/validationRules/Date_cannot_be_less_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_cannot_be_less_than_Start_Date</fullName>
    <active>true</active>
    <description>Active Through Date must be past Start Date</description>
    <errorConditionFormula>$User.Run_Validation__c &amp;&amp;
Active_Through__c   &lt;=   Start_Date__c</errorConditionFormula>
    <errorDisplayField>Active_Through__c</errorDisplayField>
    <errorMessage>Active Through date must be after Start Date.</errorMessage>
</ValidationRule>