force-app/main/default/objects/Coverage_Code__c/listViews/Active_Replacements.listView-meta.xml
<ListView>
    <fullName>Active_Replacements</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Coverage_Code_Type__c</columns>
    <columns>Current_Cov_Code__c</columns>
    <columns>New_Cov_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Active_Through__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Through__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Active_Through__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active &quot;Replacements&quot;</label>
</ListView>