force-app/main/default/objects/Coverage_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Code_Type__c</columns>
    <columns>Current_Cov_Code__c</columns>
    <columns>New_Cov_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Active_Through__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>